--- a/Code/Web Server/templates/capteurs.html
+++ b/Code/Web Server/templates/capteurs.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Acquisition capteurs</title>
   </head>
   <body>
