Added web update

--- a/Code/Web Server/templates/Contact.html
+++ b/Code/Web Server/templates/Contact.html
@@ -6,7 +6,13 @@
     <title>View</title>
   </head>
   <body>
-    <h1>Contact</h1>
+    <header>
+      <h1>CERES</h1>
+    </header>
+    <div id="title">
+      <h1 class="title">Contact</h1>
+    </div>
+    
     <a href="https://github.com/VincentNOURY/Projet-Ceres">Github</a>
   </body>
 </html>
