--- a/Code/Web Server/templates/view.html
+++ b/Code/Web Server/templates/view.html
@@ -6,13 +6,20 @@
     <title>View</title>
   </head>
   <body>
-    <h1>Test</h1>
-    {% with messages = get_flashed_messages() %}
-      {% if messages %}
-        {% for message in messages %}
-          <p>{{message}}</p>
-        {% endfor %}
-      {% endif %}
-    {% endwith %}
+    <header>
+      <h1>CERES</h1>
+    </header>
+    <div id="title">
+      <h1 class="title">Données des capteurs</h1>
+    </div>
+          <h4>Capteur 1 :</h4>
+          <p>Température : 22°C</p>
+          <p>Humidité : 5%</p>
+          <h4>Capteur 2 :</h4>
+          <p>Température : 23°C</p>
+          <p>Humidité : 6%</p>
+          <h4>Capteur 3 :</h4>
+          <p>Température : 21°C</p>
+          <p>Humidité : 5%</p>
   </body>
 </html>
