Added log module and fixed issues in web_server.py

--- a/Code/WebServer/templates/accueil.html
+++ b/Code/WebServer/templates/accueil.html
@@ -20,11 +20,11 @@
 				<h1>CERES</h1>
 
 			<div id="topbar">
-				<a href="accueil.html"><button type="button">Accueil</button></a>
-				<a href="capteurs.html"><button type="button">Capteurs</button></a>
-				<a href="config.html"><button type="button">Configuration</button></a>
-				<a href="contact.html"><button type="button">Contact</button></a>
-				<a href="view.html"><button type="button">View</button></a>
+				<a href="{{url_for('home')}}"><button type="button">Accueil</button></a>
+				<a href="{{url_for('capteurs')}}"><button type="button">Capteurs</button></a>
+				<a href="{{url_for('config_page')}}"><button type="button">Configuration</button></a>
+				<a href="{{url_for('contact')}}"><button type="button">Contact</button></a>
+				<a href="{{url_for('view')}}"><button type="button">View</button></a>
 			</div>
 			</div>
 
