--- a/Code/WebServer/templates/contact.html
+++ b/Code/WebServer/templates/contact.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     <title>View</title>
   </head>
   <body>
@@ -12,7 +12,7 @@
     <div id="title">
       <h1 class="title">Contact</h1>
     </div>
-    
+
     <a href="https://github.com/VincentNOURY/Projet-Ceres">Github</a>
   </body>
 </html>
